k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql/
          name: mysql-data
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-data
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perpus-laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perpus-laravel
  template:
    metadata:
      labels:
        app: perpus-laravel
    spec:
      imagePullPolicy: Always
      containers:
      - name: perpus-laravel
        image: quay.io/omidiyanto/perpus-laravel:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: [ "sh", "setup.sh" ]
---
apiVersion: v1
kind: Service
metadata:
  name: perpus-laravel
spec:
  selector:
    app: perpus-laravel
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perpus-laravel
  labels:
    name: perpus-laravel
spec:
  rules:
  - host: perpus-laravel.omidiyanto.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: perpus-laravel
            port:
              number: 8000
